infra/apicurio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio-registry
  namespace: banking-infra
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: demo-issuer
spec:
  to:
    kind: Service
    name: apicurio-registry
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
